@@ -1,7 +1,8 @@
 class CreateColors < ActiveRecord::Migration
   def self.up
     create_table :colors do |t|
-      t.string :name, :html
+      t.string :name, :null => false
+      t.string :html
     end
   end
   
